CLI: refactored leaderboard to show distinguish online players, offline players, winner and loser, but keeping their points shown. Everything has been done by exploiting the ranking information inside the GameView. Addresses #62